--- a/posts/ios-code-sample-coding-key-points.mdx
+++ b/posts/ios-code-sample-coding-key-points.mdx
@@ -7,7 +7,7 @@ Previously we described our <Link href='/posts/ios-code-sample-infrastructure'>i
 One of this blog’s coding goals is to use the same classes across multiple platforms. Our iOS App uses the same logical separation of responsibilities into classes as the earlier <Link href='/posts/reactjs-codingkeypoints'>React SPA</Link>:
 
 <div className="smallimage">
-![code layout](/images/570/code-layout.jpg)
+![code layout](/images/570/code-layout.jpg?v=20240914)
 </div>
 
 ### Unobtrusive OAuth Integration
@@ -330,7 +330,7 @@ protocol Authenticator {
 Our app has two views that load concurrently and fire three concurrent API requests. The main view data is retrieved and there are also two additional API requests to get user info. OAuth user info is retrieved from the authorization server and additional user attributes are retrieved from the API.
 
 <div className="smallimage">
-![concurrent views](/images/570/concurrent-views.jpg?v=20240713)
+![concurrent views](/images/570/concurrent-views.jpg?v=20240914)
 </div>
 
 A *ViewModelCoordinator* object is used to wait for all views to load. In the event of any view receiving a permanent 401 response from the API, a single OAuth redirect is triggered by the main view:
@@ -424,25 +424,9 @@ At runtime the properties of AppAuth objects are set based on our OAuth configur
 }
 ```
 
-AppAuth libraries produce outgoing authorization code flow (PKCE) request messages and then handle incoming response messages:
-
-![appauth messages](/images/570/appauth-messages.jpg)
-
-The libraries also select the type of login window, and the default option is to use an *ASWebAuthenticationSession* window:
-
-<div className="smallimage">
-![aswebauthenticationsession](/images/570/aswebauthenticationsession.jpg?v=20240713)
-</div>
-
 ### AppAuth Library – Login Responses
 
-Upon return from login we present the below *Web Hosted Post Login Page* in the system browser window. This screen receives the authorization code in a response query parameter.
-
-<div className="smallimage">
-![login completion](/images/570/login-completion.jpg?v=20240713)
-</div>
-
-JavaScript code in the web page invokes the login receiver activity when the continue button is pressed. This forwards any received query parameters, including the authorization code, to the app:
+Upon return from login we present the below *Web Hosted Post Login Page* in the system browser window. This screen receives the authorization code in a response query parameter. JavaScript code in the web page invokes the login receiver activity when the continue button is pressed. This forwards any received query parameters, including the authorization code, to the app:
 
 ```javascript
 <script>
@@ -493,12 +477,6 @@ private func isCancelledError(error: Error) -> Bool {
         code: OIDErrorCode.userCanceledAuthorizationFlow.rawValue))
 }
 ```
-
-For cancelled logins we return the user to the *Login Required View* so that they can retry the operation:
-
-<div className="smallimage">
-![cancelled login](/images/570/cancelled-login.jpg?v=20240713)
-</div>
 
 ### AppAuth Library – Authorization Code Grant
 
@@ -619,8 +597,6 @@ When multiple views call APIs and receive 401 responses, the token renewal call 
 - A single token renewal message is sent to the authorization server
 - Multiple views successfully call the API again with the new access token
 
-![synchronized refresh](/images/570/synchronized-refresh.jpg)
-
 To ensure this, our code uses a *ConcurrentActionHandler* object, so that only a single UI view does a token refresh at a time:
 
 ```swift
@@ -698,13 +674,7 @@ func startLogoutRedirect(viewController: UIViewController) throws {
 }
 ```
 
-Logout request messages include a *Post Logout Redirect URI* that points to our *Web Hosted Post Logout Page*:
-
-<div className="smallimage">
-![logout completion](/images/570/logout-completion.jpg?v=20240713)
-</div>
-
-When the user continues, the web page again invokes the app’s claimed HTTPS scheme, which completes the operation in the same manner as for login redirects.
+Logout request messages include a *Post Logout Redirect URI* that points to our *Web Hosted Post Logout Page*. When the user continues, the web page again invokes the app’s claimed HTTPS scheme, which completes the operation in the same manner as for login redirects.
 
 ### AppAuth Library – Error Codes
 
@@ -735,7 +705,7 @@ typedef NS_ENUM(NSInteger, OIDErrorCodeOAuthToken) {
 The app’s error handling is diligent about capturing these runtime details, to help with OAuth problem resolution:
 
 <div className="smallimage">
-![appauth error](/images/570/appauth-error.jpg)
+![appauth error](/images/570/appauth-error.jpg?v=20240914)
 </div>
 
 By coding in Swift, our iOS sample requires fewest technical layers to integrate AppAuth libraries, and we have first class access to error details.
@@ -814,13 +784,13 @@ Finally, note that deep link messages are ignored when an OAuth redirect is in p
 
 Since we are using Swift code, we can debug code by setting a breakpoint, and use step through commands from the *Debug Menu*. This also enables us to view the state of AppAuth objects:
 
-![debug](/images/570/debug.jpg)
+![debug](/images/570/debug.jpg?v=20240914)
 
 ### Swift Code Quality Checks
 
 At build time we use the [SwiftLint code analyzer tool](https://github.com/realm/SwiftLint), to check some of the finer details of the Swift code, to help keep the coding style maintainable:
 
-![code quality warnings](/images/570/code-quality-warnings.jpg)
+![code quality warnings](/images/570/code-quality-warnings.jpg?v=20240914)
 
 ### AppAuth Libraries
 
