--- a/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -219,7 +219,7 @@ To connect to local APIs, update the URL in the desktop.config.json file to the 
 
 When you now run the desktop app it will call the local API, and you can also focus on API behaviour, such as OAuth and log handling:
 
-![spa and api](/images/420/spa-and-api.jpg)
+![desktop app and api](/images/420/desktop-app-and-api.jpg?v=20240915)
 
 ### Where Are We?
 
