--- a/posts/effective-api-logging.mdx
+++ b/posts/effective-api-logging.mdx
@@ -74,7 +74,7 @@ An example log entry is shown below, and is similar conceptually to a *HTTP Serv
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientApplicationName": "LoadTest",
+  "clientName": "LoadTest",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 200,
   "millisecondsTaken": 7,
@@ -247,7 +247,7 @@ When APIs return an HTTP 400 related status, they log the client response error 
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "statusCode": 401,
   "errorCode": "invalid_token",
   "millisecondsTaken": 2,
@@ -276,7 +276,7 @@ When API requests return an HTTP 500 related status, the error logged includes b
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 500,
   "errorCode": "exception_simulation",
@@ -359,7 +359,7 @@ The logging then contains a number of performance items to provide a breakdown o
   "hostName": "MACSTATION.local",
   "method": "GET",
   "path": "/investments/companies",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 200,
   "millisecondsTaken": 383,
@@ -439,7 +439,7 @@ APIs often also implement non REST operations, such as processing event messages
   "method": "POST",
   "path": "/invoices/777",
   "resourceId": "777",
-  "clientApplicationName": "MessageBroker",
+  "clientName": "MessageBroker",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 200,
   "millisecondsTaken": 7,
