--- a/posts/final-nodeapi-coding-key-points.mdx
+++ b/posts/final-nodeapi-coding-key-points.mdx
@@ -303,7 +303,7 @@ Error output for developers has a *productive and readable format*, and producti
   "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 500,
   "errorCode": "exception_simulation",
