--- a/posts/java-spring-boot-api-overview.mdx
+++ b/posts/java-spring-boot-api-overview.mdx
@@ -8,7 +8,7 @@ As for other code samples on this blog, the API has a money based theme of inves
 
 The API aims to be visual and can serve this blog’s apps, such as the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA</Link> below. Running both together is a good way to ensure that the API is client focused. API logs are then generated via requests from the client:
 
-![spa and api](/images/350/spa-and-api.jpg?v=20240913)
+![spa and api](/images/350/spa-and-api.jpg?v=20240915)
 
 ### API URLs
 
@@ -180,7 +180,7 @@ The other main objective of the API code sample will be JSON logging of API requ
   "method" : "GET",
   "path" : "/investments/companies/4/transactions",
   "resourceId" : "4",
-  "clientApplicationName" : "FinalSPA",
+  "clientName" : "FinalSPA",
   "userId" : "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode" : 200,
   "millisecondsTaken" : 288,
