--- a/posts/net-core-api-coding-model.mdx
+++ b/posts/net-core-api-coding-model.mdx
@@ -233,7 +233,7 @@ Error output has a *productive and readable* format, and production logs will al
   "method": "GET",
   "path": "/investments/companies/4/transactions",
   "resourceId": "4",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "statusCode": 200,
   "errorCode": "unauthorized",
   "millisecondsTaken": 12,
