--- a/posts/spring-boot-api-coding-model.mdx
+++ b/posts/spring-boot-api-coding-model.mdx
@@ -332,7 +332,7 @@ Error output has a productive and readable format, and production logs will also
   "method" : "GET",
   "path" : "/investments/companies/4/transactions",
   "resourceId" : "4",
-  "clientApplicationName" : "FinalSPA",
+  "clientName" : "FinalSPA",
   "userId" : "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode" : 500,
   "errorCode" : "exception_simulation",
