--- a/posts/spring-boot-api-oauth-integration.mdx
+++ b/posts/spring-boot-api-oauth-integration.mdx
@@ -329,7 +329,7 @@ API logs include details about OAuth errors, which helps when there is a configu
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "statusCode": 200,
   "errorCode": "invalid_token",
   "millisecondsTaken": 43,
