--- a/posts/api-journey-client-side.mdx
+++ b/posts/api-journey-client-side.mdx
@@ -2,8 +2,8 @@
 
 Previously I summarised some backend technical behaviours in <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>. Next I summarize some end-to-end technical behaviours for OAuth-secured applications, which this blog’s final frontend code samples implement in multiple technologies:
 
-- <Link href='/posts/final-spa-overview'>Final React SPA</Link>
-- <Link href='/posts/final-desktop-sample-overview'>Final Electron Desktop App</Link>
+- <Link href='/posts/final-spa-overview'>Final SPA</Link>
+- <Link href='/posts/final-desktop-sample-overview'>Final Desktop App</Link>
 - <Link href='/posts/android-code-sample-overview'>Final Android App</Link>
 - <Link href='/posts/ios-code-sample-overview'>Final iOS App</Link>
 
@@ -321,7 +321,7 @@ To provide the behaviours that I articulate, this blog's API require some plumbi
 
 This blog's client development setup enables you to run client code while pointing to remote API URLs. This includes deploying a remote backend for frontend to enable productive SPA development. You run end-to-end setups with URLs that use SSL and domain names. This best enables deployment related thinking during development.
 
-![spa and api](/images/270/spa-and-api.jpg?v=20240913)
+![spa and api](/images/270/spa-and-api.jpg?v=20240915)
 
 ### Where Are We?
 
