--- a/posts/error-handling-and-supportability.mdx
+++ b/posts/error-handling-and-supportability.mdx
@@ -44,7 +44,7 @@ The API logs the error along with some context in case the 401 is unexpected. Fo
   "method": "GET",
   "path": "/investments/companies/4/transactions",
   "resourceId": "4",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "statusCode": 401,
   "errorCode": "invalid_token",
   "millisecondsTaken": 4,
@@ -258,7 +258,7 @@ For 5xx errors, this blog’s APIs log the error details in the following format
   "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 500,
   "errorCode": "exception_simulation",
@@ -362,7 +362,7 @@ export class CustomHeaderMiddleware {
 Not all errors are so deterministic and occasionally software has deeper bugs that occur intermittently. The best way to deal with these is to assign them an error code, then measure them. The <Link href='/posts/api-technical-support-analysis'>Technical Support Analysis</Link> post explains how structured logs can enable a report with a breakdown of API errors by type and frequency. Once you have visibility you can plan actions for any unexpected error occurrences, such as by adding extra details to logs.
 
 ```markdown
-clientApplicationName|    apiName    |    operationName     |  statusCode   |     errorCode      |   frequency   
+clientName|    apiName    |    operationName     |  statusCode   |     errorCode      |   frequency   
 ---------------------+---------------+----------------------+---------------+--------------------+---------------
 FinalSPA             |FinalApi      |getCompanyTransactions|404            |company_not_found   |6              
 FinalSPA             |FinalApi      |getCompanyList        |500            |exception_simulation|2              
