--- a/posts/net-core-api-oauth-integration.mdx
+++ b/posts/net-core-api-oauth-integration.mdx
@@ -346,7 +346,7 @@ API logs include details about OAuth errors, which helps when there is a configu
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientApplicationName": "FinalSPA",
+  "clientName": "FinalSPA",
   "statusCode": 200,
   "errorCode": "unauthorized",
   "millisecondsTaken": 43,
